--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,7 +8,7 @@ website:
       - about.qmd
       - href: index.qmd
         text: About the book
-      - href: About-authors.qmd
+      - href: about-authors.qmd
         text: About the authors  
       
 format:
